Add .NET output